--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@ p{
   font-size: 18px;
 }
 
-#search_form{
-}
 
 .form_title{
 }
@@ -20,8 +18,6 @@ p{
 .input_h *{
     float:left;
     margin: 15px;
-
-
 }
 
 .large_input{
@@ -35,7 +31,7 @@ p{
   background-color: #e6e6e6;
   font-size: 20px;
   clear: none;
-  vertical-align: center;
+  vertical-align: middle;
   max-height: 70px;
 }
 
@@ -79,4 +75,17 @@ p{
   font-size: 18px;
   width: 190px;
   text-align: center;
+}
+
+.viewrecipe li{
+  margin: 18px;
+  font-size: 18px;
+}
+
+.viewrecipe{
+  list-style-type: none;
+}
+
+.spacer{
+  clear:both;
 }
